# Solucoes_da_Introducao_a_Computacao_IME_USP_2005

./: CMakeLists.txt  README.md
1.Inteiros/1/: um.c
1.Inteiros/10/: dez.c
1.Inteiros/11/: onze.c
1.Inteiros/12/: doze.c
1.Inteiros/13/: treze.c
1.Inteiros/14/: catorze.c
1.Inteiros/15/: quinze.c
1.Inteiros/16/: dezesseis.c
1.Inteiros/17/: dezessete.c
1.Inteiros/18/: dezoito.c
1.Inteiros/19/: dezenove.c
1.Inteiros/2/: dois.c
1.Inteiros/20/: vinte.c
1.Inteiros/21/: vinteum.c
1.Inteiros/22/: vintedois.c
1.Inteiros/23/: vintetres.c
1.Inteiros/24/: vintequatro.c
1.Inteiros/3/: tres.c
1.Inteiros/4/: quatro.c
1.Inteiros/5/: cinco.c
1.Inteiros/6/: seis.c
1.Inteiros/7/: sete.c
1.Inteiros/8/: oito.c
1.Inteiros/9/: nove.c
2.Repetições Encaixadas/2/: dois.c
2.Repetições Encaixadas/4/: quatro.c
2.Repetições Encaixadas/5/: cinco.c
2.Repetições Encaixadas/6/: seis.c
2.Repetições Encaixadas/8/: oito.c
2.Repetições_Encaixadas/1/: um.c
2.Repetições_Encaixadas/3/: tres.c
2.Repetições_Encaixadas/6/: seis.c
2.Repetições_Encaixadas/7/: sete.c
3.Reais/1/: um.c
3.Reais/10/: dez.c
3.Reais/11/: onze.c
3.Reais/12/: doze.c
3.Reais/2/: dois.c
3.Reais/3/: tres.c
3.Reais/4/: quatro.c
3.Reais/5/: cinco.c
3.Reais/6/: seis.c
3.Reais/7/: sete.c
3.Reais/8/: oito.c
3.Reais/9/: nove.c
4.Funcoes1/1/: um.c
4.Funcoes1/2/: dois.c
4.Funcoes1/3/: tres.c
4.Funcoes1/4/: quatro.c
4.Funcoes1/5/: cinco.c
4.Funcoes1/6/: seis.c
5.Funcoes2/1/: um.c
5.Funcoes2/2/: dois.c
5.Funcoes2/3/: tres.c
5.Funcoes2/4/: quatro.c
5.Funcoes2/5/: cinco.c
5.Funcoes2/6/: seis.c
6.Vetores/: poli.c  poli.h
6.Vetores/1/: um.c
6.Vetores/10/: dez.c
6.Vetores/11/: onze.c
6.Vetores/12/: doze.c
6.Vetores/13/: treze.c
6.Vetores/14/: catorze.c
6.Vetores/15/: quinze.c
6.Vetores/16/: dezesseis.c
6.Vetores/17/: dezessete.c
6.Vetores/2/: dois.c
6.Vetores/3/: tres.c
6.Vetores/4/: quatro.c
6.Vetores/5/: cinco.c
6.Vetores/6/: seis.c
6.Vetores/7/: sete.c
6.Vetores/8/: oito.c
6.Vetores/9/: nove.c
7.Matriz/: matriz.c  matriz.h
7.Matriz/1/: um.c
7.Matriz/10/: dez.c
7.Matriz/11/: onze.c
7.Matriz/12/: doze.c
7.Matriz/2/: dois.c
7.Matriz/3/: tres.c
7.Matriz/4/: quatro.c
7.Matriz/5/: cinco.c
7.Matriz/6/: seis.c
7.Matriz/7/: sete.c
7.Matriz/8/: oito.c
7.Matriz/9/: nove.c
8.Funcoes3/1/: um.c
8.Funcoes3/10/: dez.c
8.Funcoes3/11/: onze.c
8.Funcoes3/12/: doze.c
8.Funcoes3/13/: treze.c
8.Funcoes3/14/: catorze.c
8.Funcoes3/15/: quinze.c
8.Funcoes3/2/: dois.c
8.Funcoes3/3/: tres.c
8.Funcoes3/4/: quatro.c
8.Funcoes3/5/: cinco.c
8.Funcoes3/6/: seis.c
8.Funcoes3/7/: sete.c
8.Funcoes3/8/: oito.c
8.Funcoes3/9/: nove.c
